Working ranger based backend