@@ -17,14 +17,19 @@ package io.appform.ranger.hub.server.bundle;
 
 import com.codahale.metrics.health.HealthCheck;
 import com.fasterxml.jackson.core.type.TypeReference;
+import com.google.common.base.Strings;
+import com.phonepe.drove.models.api.ExposedAppInfo;
 import io.appform.ranger.client.RangerClientConstants;
 import io.appform.ranger.client.RangerHubClient;
+import io.appform.ranger.client.drove.UnshardedRangerDroveHubClient;
 import io.appform.ranger.client.http.UnshardedRangerHttpHubClient;
 import io.appform.ranger.client.zk.UnshardedRangerZKHubClient;
 import io.appform.ranger.common.server.ShardInfo;
 import io.appform.ranger.core.finder.serviceregistry.ListBasedServiceRegistry;
 import io.appform.ranger.core.model.ServiceNode;
 import io.appform.ranger.core.signals.Signal;
+import io.appform.ranger.drove.config.DroveUpstreamConfig;
+import io.appform.ranger.drove.serde.DroveResponseDataDeserializer;
 import io.appform.ranger.http.config.HttpClientConfig;
 import io.appform.ranger.http.model.ServiceNodesResponse;
 import io.appform.ranger.hub.server.bundle.configuration.*;
@@ -32,8 +37,10 @@ import io.appform.ranger.hub.server.bundle.healthcheck.RangerHealthCheck;
 import io.appform.ranger.hub.server.bundle.lifecycle.CuratorLifecycle;
 import io.appform.ranger.server.bundle.RangerServerBundle;
 import io.dropwizard.Configuration;
-import lombok.*;
+import lombok.AllArgsConstructor;
+import lombok.NoArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import lombok.val;
 import org.apache.curator.framework.CuratorFramework;
 import org.apache.curator.framework.CuratorFrameworkFactory;
 import org.apache.curator.retry.RetryForever;
@@ -60,21 +67,21 @@ public abstract class RangerHubServerBundle<U extends Configuration>
         return upstreams.stream()
                 .map(rangerUpstreamConfiguration -> rangerUpstreamConfiguration.accept(new HubCreatorVisitor(serverConfig.getNamespace())))
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     protected List<Signal<ShardInfo>> withLifecycleSignals(U configuration) {
         return curatorFrameworks.stream()
                 .map(curatorFramework -> (Signal<ShardInfo>) new CuratorLifecycle(curatorFramework))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     protected List<HealthCheck> withHealthChecks(U configuration) {
         return curatorFrameworks.stream()
                 .map(curatorFramework -> (HealthCheck) new RangerHealthCheck(curatorFramework))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @AllArgsConstructor
@@ -104,7 +111,7 @@ public abstract class RangerHubServerBundle<U extends Configuration>
                             });
                         }
                         catch (IOException e) {
-                            log.warn("Error parsing service data with value {}", new String(data));
+                            logUnparseableData(data);
                         }
                         return null;
                     })
@@ -125,9 +132,45 @@ public abstract class RangerHubServerBundle<U extends Configuration>
                                                          });
                         }
                         catch (IOException e) {
-                            log.warn("Error parsing service data with value {}", new String(data));
+                            logUnparseableData(data);
                         }
                         return null;
+                    })
+                    .build();
+        }
+
+        private RangerHubClient<ShardInfo, ListBasedServiceRegistry<ShardInfo>> getDroveClient(
+                final DroveUpstreamConfig droveConfig, RangerDroveUpstreamConfiguration droveUpstreamConfiguration) {
+            val envTagName = Objects.requireNonNullElse(droveConfig.getEnvironmentTagName(),
+                                                        DroveUpstreamConfig.DEFAULT_ENVIRONMENT_TAG_NAME);
+            val regionTagName = Objects.requireNonNullElse(droveConfig.getRegionTagName(),
+                                                           DroveUpstreamConfig.DEFAULT_REGION_TAG_NAME);
+            return UnshardedRangerDroveHubClient.<ShardInfo>builder()
+                    .namespace(namespace)
+                    .mapper(getMapper())
+                    .clientConfig(droveConfig)
+                    .nodeRefreshTimeMs(droveUpstreamConfiguration.getNodeRefreshTimeMs())
+                    .deserializer(new DroveResponseDataDeserializer<>() {
+                        @Override
+                        protected ShardInfo translate(ExposedAppInfo appInfo, ExposedAppInfo.ExposedHost host) {
+                            val tags = Objects.<Map<String, String>>requireNonNullElse(
+                                    appInfo.getTags(), Collections.emptyMap());
+                            var env = tags.get(envTagName);
+                            env = Strings.isNullOrEmpty(env) ? droveConfig.getDefaultEnvironment() : env;
+                            var region = tags.get(regionTagName);
+                            region = Strings.isNullOrEmpty(region) ? droveConfig.getDefaultRegion() : region;
+                            if (Strings.isNullOrEmpty(env) || Strings.isNullOrEmpty(region)) {
+                                return null;
+                            }
+                            return ShardInfo.builder()
+                                    .environment(env)
+                                    .region(region)
+                                    .tags(tags.entrySet()
+                                                  .stream()
+                                                  .map(entry -> entry.getKey() + "|" + entry.getValue())
+                                                  .collect(Collectors.toUnmodifiableSet()))
+                                    .build();
+                        }
                     })
                     .build();
         }
@@ -135,17 +178,30 @@ public abstract class RangerHubServerBundle<U extends Configuration>
         @Override
         public List<RangerHubClient<ShardInfo, ListBasedServiceRegistry<ShardInfo>>> visit(
                 RangerHttpUpstreamConfiguration rangerHttpConfiguration) {
-            return rangerHttpConfiguration.getHttpClientConfigs().stream()
+            return rangerHttpConfiguration.getHttpClientConfigs()
+                    .stream()
                     .map(http -> getHttpHubClient(http, rangerHttpConfiguration))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         @Override
         public List<RangerHubClient<ShardInfo, ListBasedServiceRegistry<ShardInfo>>> visit(RangerZkUpstreamConfiguration rangerZkConfiguration) {
             return rangerZkConfiguration.getZookeepers().stream()
                     .map(zk -> addCuratorAndGetZkHubClient(zk, rangerZkConfiguration))
-                    .collect(Collectors.toList());
+                    .toList();
         }
+
+        @Override
+        public List<RangerHubClient<ShardInfo, ListBasedServiceRegistry<ShardInfo>>> visit(
+                RangerDroveUpstreamConfiguration rangerDroveConfiguration) {
+            return rangerDroveConfiguration.getDroveClusters()
+                    .stream()
+                    .map(zk -> getDroveClient(zk, rangerDroveConfiguration))
+                    .toList();        }
+    }
+
+    private static void logUnparseableData(byte[] data) {
+        log.warn("Error parsing service data with value {}", new String(data));
     }
 
 }
